<resources>
    <string name="app_name">Time\'s Up</string>
    <string name="desc">Image</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_invigilator_home"> Home </string>
    <string name="title_activity_testes">Testes</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="email" translatable="false">Email</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="have_an_account_sign_in_here">Have an account? Sign in here</string>
    <string name="dont_have_an_account_sign_up_here">Do not have an account? Sign up here</string>
    <string name="password">Password</string>
    <string name="title_activity_invigilator__setup__exam">Invigilator_Setup_Exam</string>
    <string name="title_activity_invigilator__view__result">Invigilator_View_Result</string>
    <string name="logout">Logout</string>
    <string name="login_as_invigilator">Login as Invigilator</string>
    <string name="login_as_student">Login as Student</string>
    <string name="class_student_monitoring">Class/Student Monitoring</string>
    <string name="view_results">View Results</string>
    <string name="MQTT_Data">Send Code</string>

    <!-- Exam list -->
    <string-array name="examCode">
        <item>EC01A00</item>
        <item>EC02A00</item>
        <item>EC03A00</item>
        <item>EC04A00</item>
        <item>EC05A00</item>
    </string-array>

    <string-array name="examName">
        <item>Please</item>
        <item>help</item>
        <item>me</item>
        <item>HELP</item>
    </string-array>

    <!-- Menu items -->
    <string name="menu_connect">Connect</string>
    <string name="menu_disconnect">Disconnect</string>
    <string name="menu_scan">Scan</string>
    <string name="menu_stop">Stop</string>
    <string name="menu_main_setting">Setting</string>
    <string name="menu_main_refresh" />

    <!-- BLE -->
    <string name="unknown_device">Unknown device</string>
    <string name="title_devices">BLE Device Scanner</string>
    <string name="ble_not_supported">BLE is not supported by this device</string>
    <string name="error_bluetooth_not_supported">Bluetooth is not supported by this device</string>
    <string name="connected">Connected</string>
    <string name="disconnected">Disconnected</string>
    <string name="no_data">No data</string>
    <string name="unknown_service">Unknown service</string>
    <string name="unknown_characteristic">Unknown characteristic</string>
    <string name="label_device_address">Address:</string>
    <string name="label_state">State:</string>
    <string name="label_data">Data:</string>
    <string name="set_your_test">Setup Your Test</string>
    <string name="exam_code">Test Code:</string>
    <string name="exam_title">Test Title:</string>
    <string name="exam_duration">Duration:</string>
    <string name="exam_starttime">Start Time:</string>
    <string name="submit">Submit</string>
    <string name="title_activity_ble_home">BLE Devices</string>
    <string name="title_activity_ble_scan">BLE Devices</string>
    <string name="ble_scan_scan">Scan</string>
    <string name="invigilator_setup_exam_status">MQTT status:</string>
    <string name="exam_list_name">Exam name</string>
    <string name="exam_list_code">Exam code</string>
    <string name="ble_scan_scanning_status">Scan status</string>
    <string name="edit_profile_done">Done</string>
    <string name="title_activity_ble_gatt">Connected Device</string>
    <string name="success">Success!</string>
    <string name="success_words">Yay! Your answers have been successful submitted, you may leave the hall.</string>
    <string name="timesup">Times Up!</string>
    <string name="timesup_words">Awww... time’s up! No worries your answers have been submitted :)</string>
    <string name="Error">Opps!</string>
    <string name="error_words">Opps! We detected that you have walked out/away from the test hall, your answers have been submitted for safekeeping, please contact your lecturer.</string>

</resources>