<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:background="@drawable/invililoginbackground">

    <EditText
        android:id="@+id/login_email"
        android:layout_width="260dp"
        android:layout_height="43dp"
        android:layout_marginStart="98dp"
        android:layout_marginTop="200dp"
        android:layout_marginEnd="98dp"
        android:layout_marginBottom="368dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.511"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.433"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/login_pw"
        android:layout_width="260dp"
        android:layout_height="43dp"
        android:layout_marginStart="98dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="98dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.511"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_email"
        android:importantForAutofill="no" />

    <TextView
        android:id="@+id/login_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="175dp"
        android:layout_marginEnd="177dp"
        android:layout_marginBottom="90dp"
        android:text="@string/login_as_student"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_signin"
        app:layout_constraintVertical_bias="0.19" />

    <Button
        android:id="@+id/login_signin"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="180dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="90dp"
        android:background="@drawable/invigo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_pw" />

</androidx.constraintlayout.widget.ConstraintLayout>